Downgrade to Java 8
This will provide support for versions since 1.13